load("@drake//tools/install:install.bzl", "install")

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_unittest",
)

load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

pybind_py_library(
    name = "lcm_log_utils_py",
    cc_so_name = "lcm_log_utils",
    cc_srcs = ["lcm_log_utils_py.cc"],
    cc_deps = [
	"//attic/multibody:lcm_log_utils",
        "@drake//bindings/pydrake/common:cpp_template_pybind",
        "@drake//bindings/pydrake/systems:systems_pybind",
	"@drake//:drake_shared_library",
        "@drake//bindings/pydrake/common:eigen_pybind",
    ],
    py_deps = ["@drake//bindings/pydrake"],
    py_imports = ["."],
)

pybind_py_library(
    name = "contact_toolkit_py",
    cc_so_name = "contact_toolkit",
    cc_srcs = ["contact_toolkit_py.cc"],
    cc_deps = [
	"//attic/multibody:contact_toolkit",
        "@drake//bindings/pydrake/common:cpp_template_pybind",
        "@drake//bindings/pydrake/systems:systems_pybind",
	"@drake//:drake_shared_library",
        "@drake//bindings/pydrake/common:eigen_pybind",
    ],
    py_deps = ["@drake//bindings/pydrake"],
    py_imports = ["."],
)

pybind_py_library(
    name = "cassie_utils_py",
    cc_so_name = "cassie_utils",
    cc_srcs = ["cassie_utils_py.cc"],
    cc_deps = ["//examples/Cassie:cassie_utils",
               "@drake//bindings/pydrake/systems:systems_pybind",
               "@drake//bindings/pydrake/common:cpp_template_pybind",
               ],
    py_imports = ["."],
)

pybind_py_library(
    name = "dircon_position_data_py",
    cc_so_name = "dircon_position_data",
    cc_srcs = ["dircon_position_data_py.cc"],
    cc_deps = ["//attic/systems/trajectory_optimization:dircon",
	       "@drake//:drake_shared_library",
               "@drake//bindings/pydrake/systems:systems_pybind",
               "@drake//bindings/pydrake/common:cpp_template_pybind",
               ],
    py_imports = ["."],
)

py_binary(
    name = "parseLcmLog",
    srcs = ["parseLcmLog.py"],
    deps = [":lcm_log_utils_py"],
)

py_binary(
    name = "massMatrix0",
    srcs = ["massMatrix0.py"],
    deps = [":lcm_log_utils_py",
            "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "calcKStationary",
    srcs = ["calcKStationary.py"],
    deps = [":lcm_log_utils_py",
            ":contact_toolkit_py",
            ":cassie_utils_py",
            "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "calcK",
    srcs = ["calcK.py"],
    deps = [":lcm_log_utils_py",
            ":contact_toolkit_py",
            ":cassie_utils_py",
            ":dircon_position_data_py",
            "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "calcAccel",
    srcs = ["calcAccel.py"],
    deps = [":lcm_log_utils_py",
            ":contact_toolkit_py",
            ":cassie_utils_py",
            ":dircon_position_data_py",
            "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "calcAccelFullRank",
    srcs = ["calcAccelFullRank.py"],
    deps = [":lcm_log_utils_py",
            ":contact_toolkit_py",
            ":cassie_utils_py",
            ":dircon_position_data_py",
            "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "debug",
    srcs = ["debug.py"],
    deps = [":lcm_log_utils_py",
            ":contact_toolkit_py",
            ":cassie_utils_py",
            ":dircon_position_data_py",
            "@drake//bindings/pydrake",
    ],
)
