load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "run_cf_mpfc",
    srcs = ["run_cf_mpfc.cc"],
    deps = [
        ":cassie_acom",
        "//examples/Cassie:cassie_utils",
        "//systems/controllers/footstep_planning:cf_mpfc",
        "//systems/controllers/footstep_planning:cf_mpfc_utils",
        "@gflags",
    ],
)

cc_library(
    name = "cassie_acom",
    srcs = ["cassie_acom_function.cc"],
    hdrs = ["cassie_acom_function.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
