load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "run_cf_mpfc",
    srcs = ["run_cf_mpfc.cc"],
    deps = [
        ":cassie_acom",
        "//examples/Cassie:cassie_utils",
        "//examples/Cassie/osc",
        "//examples/Cassie/systems:cassie_out_to_radio",
        "//lcmtypes:lcmt_robot",
        "//systems:system_utils",
        "//systems:robot_lcm_systems",
        "//systems/framework:lcm_driven_loop",
        "//systems/controllers/footstep_planning:cf_mpfc_system",
        "@gflags",
    ],
)

cc_library(
    name = "cassie_acom",
    srcs = ["cassie_acom_function.cc"],
    hdrs = ["cassie_acom_function.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
