load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_py_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_unittest",
)

py_library(
    name = "urdf",
    data = ["urdf/cube.urdf"],
)

py_library(
    name = "cube_sim",
    srcs = ["cube_sim.py"],
    deps = [],
)

py_library(
    name = "drake_cube_sim_py",
    srcs = ["drake_cube_sim.py"],
    deps = [
        ":cube_sim",
        ":urdf",
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "cassie_loss_utils",
    srcs = ["cassie_loss_utils.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "mujoco_cube_sim_py",
    srcs = ["mujoco_cube_sim.py"],
    deps = [":cube_sim"],
)

py_library(
    name = "drake_cassie_sim_py",
    srcs = ["drake_cassie_sim.py"],
    deps = [":cassie_loss_utils"],
)

py_binary(
    name = "cube_sim_test",
    srcs = ["cube_sim_test.py"],
    deps = [
        ":cube_sim",
        ":drake_cube_sim_py",
        ":mujoco_cube_sim_py",
    ],
)

py_binary(
    name = "learn_cube_parameters",
    srcs = ["learn_cube_parameters.py"],
    deps = [
        ":cube_sim",
        ":drake_cube_sim_py",
        ":mujoco_cube_sim_py",
    ],
)

py_binary(
    name = "learn_cassie_parameters",
    srcs = ["learn_cassie_parameters.py"],
    deps = [
        ":cassie_loss_utils",
        ":cube_sim",
        ":drake_cassie_sim_py",
        ":mujoco_cube_sim_py",
        "//bindings/pydairlib/common:plot_styler",
    ],
)
