# -*- mode: python -*-
# vi: set ft=python :

cc_binary(
    name = "run_dircon_walking",
    srcs = ["run_dircon_walking.cc"],
    data = [":five_link_biped.urdf"],
    deps = [
        "//common",
        "//lcm:trajectory_saver",
        "//systems/primitives",
        "//systems/trajectory_optimization:dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "visualizer",
    srcs = ["visualizer.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//common",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_id_walking_controller",
    srcs = ["run_id_walking_controller.cc"],
    data = [":five_link_biped.urdf"],
    deps = [
        "//common",
        "//examples/Cassie/osc",
        "//examples/Cassie/osc_jump",
        "//lcm:trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/controllers:time_based_fsm",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "five_link_biped_sim",
    srcs = ["five_link_biped_sim.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//common",
        "//lcm:trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)
