# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "urdfs",
    data = glob([
        "urdf/**",
    ]),
)

cc_library(
    name = "franka_hardware",
    deps = [],
)

cc_library(
    name = "franka_dispatcher_in",
    srcs = ["franka_dispatcher_in.cc"],
    tags = ["ros"],
    deps = [
        "//systems/ros:ros_pubsub_systems"
    ],
)

cc_library(
    name = "franka_dispatcher_out",
    srcs = ["franka_dispatcher_out.cc"],
    tags = ["ros"],
    deps = [
        "//systems/ros:ros_pubsub_systems"
    ],
)

cc_binary(
    name = "franka_sim",
    srcs = ["franka_sim.cc"],
    data = [
        ":urdfs",
        "@drake//manipulation/models/franka_description:models",
    ],
    deps = [
        ":franka_sim_params",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/controllers",
        "//common",
        "//systems/framework:lcm_driven_loop",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "franka_osc_controller",
    srcs = ["franka_osc_controller.cc"],
    data = [
        ":urdfs",
        "@drake//manipulation/models/franka_description:models",
    ],
    deps = [
        ":franka_osc_controller_params",
        "//common",
        "//examples/franka/systems:franka_systems",
        "//lcm:lcm_trajectory_saver",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/controllers",
        "//systems/trajectory_optimization:lcm_trajectory_systems",
        "//systems/controllers/osc:operational_space_control",
        "//systems/framework:lcm_driven_loop",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "franka_c3_controller",
    srcs = ["franka_c3_controller.cc"],
    data = [
        ":urdfs",
        "@drake//manipulation/models/franka_description:models",
    ],
    deps = [
        ":franka_c3_controller_params",
        "//common",
        "//examples/franka/systems:franka_systems",
        "//lcm:lcm_trajectory_saver",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/controllers:c3_controller",
        "//systems/controllers",
        "//systems/controllers/osc:operational_space_control",
        "//systems/framework:lcm_driven_loop",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "franka_visualizer",
    srcs = ["franka_visualizer.cc"],
    data = [
        ":urdfs",
        "@drake//manipulation/models/franka_description:models",
    ],
    deps = [
        ":franka_sim_params",
        "//common",
        "//multibody:utils",
        "//multibody:visualization_utils",
        "//systems:robot_lcm_systems",
        "//systems/trajectory_optimization:lcm_trajectory_systems",
        "//systems:system_utils",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "franka_sim_params",
    hdrs = ["franka_sim_params.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "franka_osc_controller_params",
    hdrs = ["franka_osc_controller_params.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)



cc_library(
    name = "franka_c3_controller_params",
    hdrs = ["franka_c3_controller_params.h"],
    deps = [
        "//solvers:c3",
        "@drake//:drake_shared_library",
    ],
)
